<resources>
    <string name="app_name" translatable="false">Work Organizer</string>
    <string name="author">Nikolai Smirnov</string>
    <string name="copyright" translatable="false">© 2017</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="edit_client">Edit Client Data</string>
    <string name="edit_work">Edit Work Data</string>
    <string name="delete">Delete</string>
    <string name="gallery">Gallery</string>
    <string name="result">Result</string>
    <string name="save">Save</string>
    <string name="design">Design</string>
    <string name="price">Price</string>
    <string name="title">Title</string>

    <string name="error_permissions">Permission not granted for</string>
    <string name="error_no_camera_permission">Application does not have permission to work with the camera.</string>
    <string name="permission_camera_rationale">Необходим доступ к камере</string>
    <string name="app_will_be_stopped">Application will be stopped.</string>

    <string name="menu_gallery_work">Gallery of Works</string>
    <string name="menu_gallery_design">Gallery of Designs</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="calendar">Calendar</string>
    <string name="client">Client</string>
    <string name="clients">Clients</string>
    <string name="examples">Examples</string>
    <string name="no_clients">No clients found</string>
    <string name="new_client">New Client</string>
    <string name="new_project">New Project</string>
    <string name="client_name">Name</string>
    <string name="client_phone">Phone</string>
    <string name="client_social">Social Network</string>
    <string name="client_email">E-mail</string>
    <string name="client_actions_dlg_title">Actions on Record</string>
    <string name="ccd_sure">Are you sure?</string>
    <string name="client_delete_dlg_title">Delete Client</string>
    <string name="client_edit_dlg_title">Edit Client</string>
    <string name="project_delete_dlg_title">Delete Work</string>
    <string name="project_edit_dlg_title">Edit Work</string>
    <string name="title_work_list">Works</string>
    <string name="title_work_detail">Work Details</string>
    <string name="select_design">&lt;Select Design&gt;</string>
    <string name="send_email_title">Send email using &#8230;</string>
    <string name="error_field_required">Mandatory field</string>
    <string name="error_file_not_found">File not found</string>
    <string name="journal">Journal</string>
    <string name="info_no_works_for_dates">No works for the given date range. Go to \"Calendar\" to create a work.</string>
    <string name="info_no_works_for_date">No works for the given date. Click \"Create\" to create a work.</string>
    <string name="done">Done</string>
    <string name="in_progress">In progress</string>
    <string name="mark_as_done">Mark as Done</string>
</resources>
