...
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_clear_black_24dp"
            android:id="@+id/btn_clear_result"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_gravity="center"
            tools:ignore="ContentDescription"/>

...
            android:paddingEnd="1dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_local_florist_black_24dp"
            android:id="@+id/btn_select_result"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_gravity="center"
            tools:ignore="ContentDescription"/>

...
